fixed some issues regarding dynamic rendering on smaller screens

--- a/client/src/css/dashboard/create_room_forms.scss
+++ b/client/src/css/dashboard/create_room_forms.scss
@@ -6,6 +6,7 @@ $panel: #575b5f;
 
 .create_room_content {
   width: 100%;
+  background-color: #383c40;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -58,7 +59,7 @@ $panel: #575b5f;
   border: 0;
   border-bottom: 2px solid $gray;
   outline: 0;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   color: $white;
   padding: 7px 0;
   background: transparent;
@@ -69,9 +70,9 @@ $panel: #575b5f;
   }
 
   &:placeholder-shown ~ .title_label {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     cursor: text;
-    top: 20px;
+    top: 10px;
   }
 }
 
@@ -90,9 +91,9 @@ $panel: #575b5f;
     top: 0;
     display: block;
     transition: 0.2s;
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: $primary;
-    font-weight:500;
+    font-weight:700;
   }
   padding-bottom: 6px;
   font-weight: 500;
@@ -119,7 +120,7 @@ $panel: #575b5f;
   border: 0;
   border-bottom: 2px solid $gray;
   outline: 0;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: $white;
   padding: 7px 0;
   background: transparent;
@@ -131,7 +132,7 @@ $panel: #575b5f;
   }
 
   &:placeholder-shown ~ .description_label {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     cursor: text;
     top: 20px;
   }
@@ -152,11 +153,11 @@ $panel: #575b5f;
     top: 0;
     display: block;
     transition: 0.2s;
-    font-size: 1rem;
     color: $primary;
     font-weight:700;
   }
   padding-bottom: 6px;
+  font-size: 1.1rem;
   font-weight: 400;
   border-width: 3px;
   border-image: linear-gradient(to right, $primary,$secondary);
