--- a/client/src/css/dashboard/dashboard.css
+++ b/client/src/css/dashboard/dashboard.css
@@ -8,6 +8,7 @@ html, body, #root {
     flex-direction: row;
     justify-content: flex-start;
     height: 100%;
+    width: 100%;
 }
 
 .dashboard_header {
